# xss.web.app

./: README.rst  pyproject.toml
.github/workflows/: TEST-AND-QUALITY-CHECK.yml
backend/: README.rst  pyproject.toml
backend/src/xss_lab/: conf.py  main.py
backend/src/xss_lab/challenges/: routes.py
frontend/: .gitignore  README.rst  change-port.js  config.json  index.html  package.json  router.php
frontend/dom_clobbering/: index.html  script.js
frontend/dom_clobbering/insecure/: index.html  script.js
frontend/dom_clobbering/secure/: index.html  script.js
frontend/element_creation/: element-creation.js  element_creation.php
frontend/input_reflection/: input_reflection.html
frontend/input_reflection/insecure/: index.html  input-reflection.js  input_reflection.html  script.js
frontend/input_reflection/secure/: index.html  input-reflection.js  input_reflection.html  script.js
frontend/input_reflection_no_backend/insecure/: index.html  input_reflection.html  script.js
frontend/input_reflection_no_backend/secure/: index.html  script.js
frontend/jqm_eval/: jqm-eval.js  jqm_eval.html  jqm_eval.php
frontend/jqm_eval/insecure/: index.html  jqm-eval.js  jqm_eval.html  script.js
frontend/jqm_eval/secure/: index.html  jqm-eval.js  jqm_eval.html  script.js
frontend/jqm_popup/: jqm_popup.php
frontend/jqm_popup/insecure/: index.html  script.js
frontend/jqm_popup/secure/: index.html  script.js
frontend/mxss/: mxss.html
frontend/mxss/insecure/: index.html  mxss.html  script.js
frontend/mxss/secure/: index.html  mxss.html  mxss.php  script.js
frontend/no-framework/: element_creation.php  jqm_eval.php  url_injection.html
frontend/no-framework/challenges/: camel_case.html  element-creation.php  element_creation.php  input_reflection.html  jqm_eval.php  jqm_popup.php  url_injection.html
frontend/no-framework/scripts/: element-creation.js  jqm-eval.js
frontend/no-framework/sink_gadgets/: eval_gadget.php  index.html  inputFunction-gadget.php
frontend/polymer3/: index.html  package-lock.json
frontend/post_message/: config.js  hints.js  index.html  main.js
frontend/sink_gadgets/: eval_gadget.php  index.html  inputFunction-gadget.js  inputFunction-gadget.php
frontend/src/: index.html
frontend/test/: test.html
frontend/test_2/: test.html
frontend/test_dom_clobbering/: index.html  malicious.js
frontend/test_dom_native/: index.html  script.js
frontend/url_injection/: url_injection.html
frontend/utils/: change-port.js  read_config.js  show-hide.js  switch-page.js
(+46 files in other folders)
